crates/toml/tests/snapshots/invalid/key/start-bracket.stderr
TOML parse error at line 2, column 5
  |
2 | [xyz = 5
  |     ^
unclosed table, expected `]`
